@@ -1,9 +1,13 @@
 # $Id$
 
+2006-09-10	Konstantin V. Arkhipov
+
+	* main/Flow/RedirectToView.class.php: {get,set}Suffix added.
+
 2006-09-08	Dmitry E. Demidov
 
-	* main/Utils/TuringTest/CodeGenerator.class.php: added restriction generation 
-	of similar symbols ability.
+	* main/Utils/TuringTest/CodeGenerator.class.php: added restriction
+	generation of similar symbols ability.
 
 2006-09-07	Dmitry E. Demidov
 
